test/type_error/array_var_call.rqcpp
Qbits q[1]

procedure P():
    a[3] = [1]
    a()

procedure main():
    P()